--- a/Flask/Templates/login.html
+++ b/Flask/Templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taskify! | Welcome</title>
-    <link rel ="stylesheet" href="style.css">
+    <link rel ="stylesheet" href="../Static/style.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
                         <a href="login.html">Login</a>
                     </li>
                     <li id ="Register">
-                        <a href="register.php">Register</a>
+                        <a href="register.html">Register</a>
                     </li>
                 </ul>
             </nav>
