--- a/Flask/Templates/index.html
+++ b/Flask/Templates/index.html
@@ -16,14 +16,14 @@
             </div>
             <nav>
                 <ul>
-                    <li id ="Home" class="current">
-                        <a href="index.html">Home</a>
+                    <li id="Home" class="current">
+                        <a href="{{ url_for('home') }}">Home</a>
                     </li>
-                    <li id ="Login">
-                        <a href="login.html">Login</a>
+                    <li id="Login">
+                        <a href="{{ url_for('login') }}">Login</a>
                     </li>
-                    <li id ="Register">
-                        <a href="register.html">Register</a>
+                    <li id="Register">
+                        <a href="{{ url_for('register') }}">Register</a>
                     </li>
                 </ul>
             </nav>
