--- a/Flask/Templates/register.html
+++ b/Flask/Templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel ="stylesheet" href="../Static/style.css">
+    <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <header>
@@ -16,14 +16,14 @@
             </div>
             <nav>
                 <ul>
-                    <li id ="Home">
-                        <a href="index.html">Home</a>
+                    <li id="Home" class="current">
+                        <a href="{{ url_for('home') }}">Home</a>
                     </li>
-                    <li id ="Login">
-                        <a href="login.html">Login</a>
+                    <li id="Login">
+                        <a href="{{ url_for('login') }}">Login</a>
                     </li>
-                    <li id ="Register" class="current">
-                        <a href="register.html">Register</a>
+                    <li id="Register">
+                        <a href="{{ url_for('register') }}">Register</a>
                     </li>
                 </ul>
             </nav>
