--- a/Flask/Templates/login.html
+++ b/Flask/Templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taskify! | Welcome</title>
+    <title>Taskify! | Login</title>
     <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
@@ -16,10 +16,10 @@
             </div>
             <nav>
                 <ul>
-                    <li id="Home" class="current">
+                    <li id="Home">
                         <a href="{{ url_for('home') }}">Home</a>
                     </li>
-                    <li id="Login">
+                    <li id="Login" class="current">
                         <a href="{{ url_for('login') }}">Login</a>
                     </li>
                     <li id="Register">
@@ -30,10 +30,13 @@
         </div>
     </header>
     <div>
-        <form>
-            <input type="text" name="username" id="username" placeholder="Username" required>
+        <form method="POST">
+            <input type="email" name="email" id="email" placeholder="Email" required>
             <input type="password" name="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
+            {% if error %}
+            <p style="color:red;">{{ error }}</p>
+            {% endif %}
         </form>
     </div>
 </body>
