--- a/Flask/Templates/login.html
+++ b/Flask/Templates/login.html
@@ -29,7 +29,10 @@
             </nav>
         </div>
     </header>
-    <div>
+    <div id="register">
+        <h2>
+            Login   
+        </h2>
         <form method="POST">
             <input type="email" name="email" id="email" placeholder="Email" required>
             <input type="password" name="password" id="password" placeholder="Password" required>
