--- a/Flask/Templates/index.html
+++ b/Flask/Templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taskify! | Welcome</title>
     <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="shortcut icon" type="image/x-icon" href="../Static/Images/favicon.ico"/>
 </head>
 <body>
     <header>
