--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -42,6 +42,7 @@
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
     </style>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
     <div class="dashboard-container">
