--- a/Flask/Templates/home.html
+++ b/Flask/Templates/home.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" href="/static/Images/favicon.png">
     <title>Taskify! | Welcome</title>
     <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
     <header>
