--- a/Flask/Templates/loginpage.html
+++ b/Flask/Templates/loginpage.html
@@ -37,6 +37,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form in HTML and CSS</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
     <style>
         body {
             display: flex;
