--- a/Flask/Static/style.css
+++ b/Flask/Static/style.css
@@ -19,10 +19,10 @@ ul{
 
 /* HEADERS */
 header{
-    background:#35424a;
+    background:#522056;
     color:#ffffff;
-    padding-top: 30px;
-    min-height:70px;
+    padding-top: 20px;
+    min-height:55px;
     border-bottom:#e8491d 3px solid;
 }
 
