--- a/Flask/Templates/index.html
+++ b/Flask/Templates/index.html
@@ -11,6 +11,7 @@
     <header>
         <div class="container">
             <div id="brand">
+                <!-- <img src="{{user_image}}" alt="Brand"> -->
                 <h1>
                     Taskify!
                 </h1>
