--- a/Flask/Templates/biometric.html
+++ b/Flask/Templates/biometric.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -9,4 +9,28 @@
     </head>
     <body>
     </body>    
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Google Icons</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+<body>
+
+<h1>fingerprint</h1>
+
+<i class="material-icons">fingerprint</i>
+<i class="material-icons" style="font-size:36px">fingerprint</i>
+<i class="material-icons" style="font-size:48px;color:red">fingerprint</i>
+
+<p>Used on a button:</p>
+<button style="font-size:24px">Button <i class="material-icons">fingerprint</i></button>
+
+<p>Unicode:</p>
+<i class="material-icons">&#xe90d;</i>
+
+</body>
 </html>
