--- a/Flask/Static/style.css
+++ b/Flask/Static/style.css
@@ -2,8 +2,13 @@
 body{
     font: 15px/1.5 Arial, Helvetica, sans-serif;
     padding:0;
-    margin:0;
-    background-color: #f4f4f4;
+    margin:0 0 0 0;
+    /* background-color: #f4f4f4; */
+    /* background-repeat: repeat; */
+    /* -webkit-background-clip:text;
+    background-clip:text; */
+    height:100%;
+    margin: 0%;
 }
 
 .container{
@@ -17,14 +22,71 @@ ul{
     padding:0;
 }
 
+.wrapper{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.wrapper::before{  
+    /* animation: zoom 60s linear infinite alternate; */
+    /* background-image: url("Images/background_2.jpg"); */
+    /* background: url("Images/2430568.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    width: 100vw;
+    opacity: 1;
+    overflow: hidden;
+    scale: 1; */
+    /* flex: 1;
+    background-image: url("Images/20536905.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    animation: slidein 2s ease-in-out;
+    animation-fill-mode: forwards; */
+    /* animation: zoom 20s linear infinite alternate; */
+
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url('Images/2430568.jpg') center center/cover no-repeat;
+    z-index: -1;
+    animation: zoom 20s infinite alternate;
+}
+
+/* .wrapper{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+} */
+
 /* HEADERS */
 header{
-    background:#522056;
+    background:#540ba1; /*#522056 */
     color:#ffffff;
+    padding:1rem;
     padding-top: 20px;
     min-height:55px;
     border-bottom:#e8491d 3px solid;
+    position:relative;
+    animation: slide_down 1s ease-in-out;
 }
+
+@keyframes slide_down {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
 
 header a{
     color:#ffffff;
@@ -54,13 +116,70 @@ header nav{
 }
 
 header .current a{
-    color:darkgoldenrod;
+    color:rgb(231, 180, 51);
     font-weight: bold;
 }
 
 header a:hover{
     color:#cccccc;
     font-weight:bold;
+    font-size: 18px;
+}
+
+/* Main */
+
+main{
+    flex: 1;
+    position: relative;
+}
+
+
+@keyframes slidein {
+
+    from {
+        /* background-position: top;background-size:3000px;  */
+        scale:1}
+    to {
+        /* background-position: -100px 0px;background-size:2750px; */
+        scale:1.2}
+    
+}
+
+@keyframes zoom {
+    0%{
+        scale:1.5;
+    }
+    100%{
+        scale:1;
+    }
+}
+/* #index-details img{
+    max-width: 100%;
+    height: auto;
+    opacity: 0.5;
+    } */
+            
+#index-detail{
+    background-color: #ffffff;
+    width: 75%;
+    height:auto;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+    text-align: center; 
+    margin: 0 auto;
+    margin-top: 4%;
+    margin-bottom: 2%;
+    border-radius: 10px;
+    border: 1px solid #e8491d;
+    opacity: 0.6;
+    position: relative;
+    z-index: 1;
+}
+
+#index-detail h2{
+    text-align: center;
+    font-size: 40px;
 }
 
 /* Register */
@@ -107,5 +226,24 @@ header a:hover{
     border-radius: 5px;
     background-color: #e8491d;
     color: white;
+    
+}
 
+/* Footer */
+footer{
+    background:#522056;
+    color:rgb(231, 180, 51);
+    text-align:center;
+    justify-content: center;
+    margin:0;
+    padding:4px;
+    /* animation: slide_side 2s ease-in-out; */
+}
+@keyframes slide_side{
+    0% {
+        transform: translateX(120%);
+    }
+    100% {
+        transform: translateX(0);
+    }
 }
