--- a/Flask/Templates/htmltask.html
+++ b/Flask/Templates/htmltask.html
@@ -28,5 +28,10 @@
 
         <input type="submit" value="Submit">
     </form>
+    <footer>
+        <p>
+            &copy; 2024 Taskify! | All Rights Reserved
+        </p>
+    </footer>
 </body>
 </html>
