--- a/Flask/Templates/index.html
+++ b/Flask/Templates/index.html
@@ -3,44 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Taskify! | Welcome</title>
     <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div id="brand">
-                <!-- <img src="{{user_image}}" alt="Brand"> -->
-                <h1>
-                    Taskify!
-                </h1>
+    <div class="wrapper">
+        <header>
+            <div class="container">
+                <div id="brand">
+                    <h1>
+                        Taskify!
+                    </h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li id="Home" class="current">
+                            <a href="{{ url_for('home') }}">Home</a>
+                        </li>
+                        <li id="Login">
+                            <a href="{{ url_for('login') }}">Login</a>
+                        </li>
+                        <li id="Register">
+                            <a href="{{ url_for('register') }}">Register</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul>
-                    <li id="Home" class="current">
-                        <a href="{{ url_for('home') }}">Home</a>
-                    </li>
-                    <li id="Login">
-                        <a href="{{ url_for('login') }}">Login</a>
-                    </li>
-                    <li id="Register">
-                        <a href="{{ url_for('register') }}">Register</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <div>
-        <h2>
-            Welcome to Taskify!
-        </h2>
-        <p>
-            Taskify is a simple task management tool that helps you keep track of your tasks and manage them efficiently.
-        </p>
-        <p>
-            To get started, please <a href="login.html">login</a> or <a href="register.html">register</a>.
-        </p>
+        </header>
+        <main>
+
+            <div id="index-detail-box">
+                <div id="index-detail">
+                    <h2>
+                        Welcome to Taskify!
+                    </h2>
+                    <p>
+                        Taskify is a simple task management tool that helps you keep track of your tasks and manage them efficiently.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus totam dicta repudiandae consectetur sequi porro accusantium hic non ipsam. Aliquid possimus quia dolorem hic ullam, debitis maxime inventore harum vel.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus totam dicta repudiandae consectetur sequi porro accusantium hic non ipsam. Aliquid possimus quia dolorem hic ullam, debitis maxime inventore harum vel.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus totam dicta repudiandae consectetur sequi porro accusantium hic non ipsam. Aliquid possimus quia dolorem hic ullam, debitis maxime inventore harum vel.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus totam dicta repudiandae consectetur sequi porro accusantium hic non ipsam. Aliquid possimus quia dolorem hic ullam, debitis maxime inventore harum vel.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus totam dicta repudiandae consectetur sequi porro accusantium hic non ipsam. Aliquid possimus quia dolorem hic ullam, debitis maxime inventore harum vel.
+                    </p>
+                </div>
+            </div>
+        </main>
+            <!-- <img src="{{user_image}}" alt="Background"> -->
+        <footer>
+            <p>
+                &copy; 2024 Taskify! | All Rights Reserved
+            </p>
+        </footer>
     </div>
 </body>
 </html>
