--- a/Flask/Templates/login.html
+++ b/Flask/Templates/login.html
@@ -8,40 +8,47 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div id="brand">
-                <h1>
-                    Taskify!
-                </h1>
+    <div class="wrapper">
+        <header>
+            <div class="container">
+                <div id="brand">
+                    <h1>
+                        Taskify!
+                    </h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li id="Home">
+                            <a href="{{ url_for('home') }}">Home</a>
+                        </li>
+                        <li id="Login" class="current">
+                            <a href="{{ url_for('login') }}">Login</a>
+                        </li>
+                        <li id="Register">
+                            <a href="{{ url_for('register') }}">Register</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul>
-                    <li id="Home">
-                        <a href="{{ url_for('home') }}">Home</a>
-                    </li>
-                    <li id="Login" class="current">
-                        <a href="{{ url_for('login') }}">Login</a>
-                    </li>
-                    <li id="Register">
-                        <a href="{{ url_for('register') }}">Register</a>
-                    </li>
-                </ul>
-            </nav>
+        </header>
+        <div id="register">
+            <h2>
+                Login   
+            </h2>
+            <form method="POST">
+                <input type="email" name="email" id="email" placeholder="Email" required>
+                <input type="password" name="password" id="password" placeholder="Password" required>
+                <button type="submit">Login</button>
+                {% if error %}
+                <p style="color:red;">{{ error }}</p>
+                {% endif %}
+            </form>
         </div>
-    </header>
-    <div id="register">
-        <h2>
-            Login   
-        </h2>
-        <form method="POST">
-            <input type="email" name="email" id="email" placeholder="Email" required>
-            <input type="password" name="password" id="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-            {% if error %}
-            <p style="color:red;">{{ error }}</p>
-            {% endif %}
-        </form>
+        <footer>
+            <p>
+                &copy; 2024 Taskify! | All Rights Reserved
+            </p>
+        </footer>
     </div>
 </body>
 </html>
