--- a/Flask/Templates/htmltask.html
+++ b/Flask/Templates/htmltask.html
@@ -1,41 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <title>Task Form</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
-</head>
-<body>
-    <h1>Task Form</h1>
-    <form method="POST" action="/submit_task">
-        <label for="task">Task:</label>
-        <input type="text" id="task" name="task"><br><br>
-
-        <label for="dateOfTaskStart">Start Date:</label>
-        <input type="date" id="dateOfTaskStart" name="dateOfTaskStart"><br><br>
-
-        <label for="dateOfTaskEnd">End Date:</label>
-        <input type="date" id="dateOfTaskEnd" name="dateOfTaskEnd"><br><br>
-
-        <label for="dedicatedTo">Dedicated To:</label>
-        <select id="dedicatedTo" name="dedicatedTo">
-            {% for user in users %}
-                <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}</option>
-            {% endfor %}
-        </select><br><br>
-
-        <label for="descript">Description:</label>
-        <textarea id="descript" name="descript"></textarea><br><br>
-
-        <input type="submit" value="Submit">
-    </form>
-    <footer>
-        <p>
-            &copy; 2024 Taskify! | All Rights Reserved
-        </p>
-    </footer>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -66,7 +28,7 @@
             font-weight: bold;
         }
         input[type="text"],
-        input[type="date"],
+        input[type="datetime-local"],
         select,
         textarea {
             width: 100%;
@@ -96,13 +58,13 @@
         <label for="task">Task:</label>
         <input type="text" id="task" name="task"><br><br>
 
-        <label for="dateOfTaskStart">Start Date:</label>
-        <input type="date" id="dateOfTaskStart" name="dateOfTaskStart"><br><br>
+        <label for="dateOfTaskStart">Start:</label>
+        <input type="datetime-local" id="dateOfTaskStart" name="dateOfTaskStart"><br><br>
 
-        <label for="dateOfTaskEnd">End Date:</label>
-        <input type="date" id="dateOfTaskEnd" name="dateOfTaskEnd"><br><br>
+        <label for="dateOfTaskEnd">End:</label>
+        <input type="datetime-local" id="dateOfTaskEnd" name="dateOfTaskEnd"><br><br>
 
-        <label for="dedicatedTo">Dedicated To:</label>
+        <label for="dedicatedTo">Assigned To:</label>
         <select id="dedicatedTo" name="dedicatedTo">
             {% for user in users %}
                 <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}</option>
