--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -1,3 +1,77 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        .dashboard-container {
+            width: 80%;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section h3 {
+            margin-bottom: 10px;
+        }
+        .section ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .section ul li {
+            background-color: #f9f9f9;
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+    
+        .back-button {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            z-index: 1000; /* Ensure the button is on top of other elements */
+        }
+    
+    </style>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
+</head>
+<body>
+    <div class="dashboard-container">
+        <h1>Hello, {{ first_name }}</h1>
+        <div class="section">
+            <h3>Your Tasks</h3>
+            <ul>
+                {% for task in tasks %}
+                    <li>{{ task['task'] }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <p id="Home" class="current">
+            <a href="{{ url_for('task') }}">Task</a>
+        
+        </p>
+    </div>
+    <button onclick="history.back()">Go Back</button>
+</body>
+</html> -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,6 +115,12 @@
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
+        .back-button {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            z-index: 10; /* Ensure the button is on top of other elements */
+        }
     </style>
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
@@ -59,5 +139,6 @@
             <a href="{{ url_for('task') }}">Task</a>
         </p>
     </div>
+    <button class="back-button" onclick="history.back()">Go Back</button>
 </body>
 </html>
