--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -154,7 +154,7 @@
             </ul>
         </div>
         <p id="Home" class="current">
-            <a href="{{ url_for('task') }}">Task</a>
+            <!--<a href="{{ url_for('task') }}">Task</a>-->
             
             <button class="task-button">Task</button>
 
