--- a/Flask/templates/completed_tasks.html
+++ b/Flask/templates/completed_tasks.html
@@ -58,13 +58,51 @@
             <ul>
                 {% for task in tasks %}
                     <li>
-                        <input type="checkbox" id="task{{ task['id'] }}" name="task{{ task['id'] }}" value="{{ task['id'] }}" checked>
-                        <label for="task{{ task['id'] }}">{{ task['task'] }}</label>
+                        <input type="checkbox" id="task{{ task['TID'] }}" name="task{{ task['TID'] }}" value="{{ task['TID'] }}" checked>
+                        <label for="task{{ task['TID'] }}">{{ task['task'] }}</label>
                     </li>
                 {% endfor %}
             </ul>
         </div>
     </div>
     <button class="back-button" onclick="history.back()">Go Back</button>
+
+    <script>
+        document.querySelectorAll('input[type="checkbox"]').forEach(item => {
+            item.addEventListener('change', event => {
+                if (!event.target.checked) {
+                    markIncomplete(event.target.value);
+                }
+            });
+        });
+
+        function markIncomplete(taskId) {
+            fetch('/mark_incomplete', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ task_id: taskId }),
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
+            .then(data => {
+                if (data.success) {
+                    location.reload();  // Reload the page to update task list
+                } else {
+                    console.error('Marking task incomplete failed:', data.message);
+                    // Optionally show an error message to the user
+                }
+            })
+            .catch(error => {
+                console.error('Error marking task incomplete:', error);
+                // Optionally show an error message to the user
+            });
+        }
+    </script>
 </body>
 </html>
