--- a/Flask/Static/style.css
+++ b/Flask/Static/style.css
@@ -208,12 +208,14 @@ main{
 #register{
     background-color: #ffffff;
     width: 300px;
+    height:100%;
     padding: 20px;
     /* display: flex; */
     justify-content: center;
     align-items: center;
     margin: 0 auto;
     margin-top: 3%;
+    margin-bottom: 3%;
     border-radius: 10px;
     border: 1px solid #e8491d;
 }
