--- a/Flask/templates/completed_tasks.html
+++ b/Flask/templates/completed_tasks.html
@@ -3,41 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel ="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
+    <script src="{{ url_for('static', filename='idex.js') }}" defer></script>
     <title>Completed Tasks</title>
-    <style>
-        .tasks-container {
-            margin: 0;
-            padding: 5%;
-            display: flex;
-            flex-direction: column;
-            /*align-items: center;
-            justify-content: center;*/
-            height: 100vh;
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        .section h3 {
-            margin-bottom: 10px;
-        }
-        .section ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .section ul li {
-            background-color: #f9f9f9;
-            margin-bottom: 10px;
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-        }
-
-    </style>
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
-    <div class="tasks-container">
+    <div class="task-container">
         <h1>Completed Tasks</h1>
         <div class="section">
             <h3>Tasks</h3>
@@ -52,41 +24,5 @@
         </div>
         <button class="task-button" onclick="window.location.href='{{ url_for('nextpage') }}';">Dashboard</button>
     </div>
-
-    <script>
-        document.querySelectorAll('input[type="checkbox"]').forEach(item => {
-            item.addEventListener('change', event => {
-                if (!event.target.checked) {
-                    markIncomplete(event.target.value);
-                }
-            });
-        });
-
-        function markIncomplete(taskId) {
-            fetch('/mark_incomplete', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ task_id: taskId }),
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(data => {
-                if (data.success) {
-                    location.reload();
-                } else {
-                    console.error('Marking task incomplete failed:', data.message);
-                }
-            })
-            .catch(error => {
-                console.error('Error marking task incomplete:', error);
-            });
-        }
-    </script>
 </body>
 </html>
