--- a/Flask/Static/idex.css
+++ b/Flask/Static/idex.css
@@ -29,6 +29,7 @@ body{
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    justify-content: space-between;
 }
 .section ul li:hover {
     background-color: #f0f0f0;
@@ -61,4 +62,25 @@ body{
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.delete-button {
+    background: none;
+    border: none;
+    color: red;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+.delete-button:hover {
+    color: darkred;
+}
+
+.task-item label {
+    flex-grow: 1;
+    margin-left: 10px;
+}
+
+.task-item input[type="checkbox"] {
+    margin-left: 10px;
 }
